# CEmbedding

./: .gitignore  README.md  cloto-connector.json  conftest.py  download_model.py  pyproject.toml  server.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
_vendored_mcp_common/: __init__.py  mcp_utils.py
cembedding/: __init__.py  __main__.py  auth.py  download_model.py  server.py
cembedding/_vendored_mcp_common/: mcp_utils.py
scripts/: backfill_embedding_index.py
skills/cembedding/: SKILL.md
tests/: test_auth.py  test_backfill.py  test_onnx_padding.py  test_vector_index.py
