[project]
name = "cembedding"
version = "0.6.1"
description = "Local-first embedding server: vector generation + index/search over HTTP (ONNX on-device or API providers). The reference /embed server for CPersona."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ClotoCore Project", email = "ClotoCore@proton.me" }]
keywords = ["embedding", "mcp", "onnx", "vector-search", "jina", "bge-m3"]
dependencies = [
    "mcp>=1.0.0,<1.27.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
onnx     = ["onnxruntime>=1.17.0", "tokenizers>=0.15.0"]
onnx-gpu = ["onnxruntime-gpu>=1.17.0", "tokenizers>=0.15.0"]
mlx      = ["mlx>=0.18.0", "mlx-embeddings>=0.1.0"]
dev      = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = ["cembedding/_vendored_mcp_common"]

[project.urls]
Homepage = "https://github.com/Cloto-dev/CEmbedding"
Repository = "https://github.com/Cloto-dev/CEmbedding"

[project.scripts]
cembedding = "cembedding.server:run"
cembedding-download-model = "cembedding.download_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package layout: the server modules live under cembedding/, including the
# vendored mcp_common snapshot at cembedding/_vendored_mcp_common/. The root
# server.py is a shim for the git-clone / development path and is deliberately
# excluded from the wheel so it never installs a top-level module.
packages = ["cembedding"]
