[project]
name = "cembedding"
version = "0.6.3"
description = "Local-first embedding server: vector generation + index/search over HTTP (ONNX on-device or API providers). The reference /embed server for CPersona."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ClotoCore Project", email = "ClotoCore@proton.me" }]
keywords = ["embedding", "mcp", "onnx", "vector-search", "jina", "bge-m3"]
# PyPI renders these as the sidebar facets (License / Topic / Intended
# Audience). The field was empty until 0.6.3, so the package appeared in none
# of PyPI's faceted searches. Python versions list what CI exercises (3.10,
# 3.12) plus 3.11 between them; requires-python still admits any 3.10+.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mcp>=1.0.0,<1.27.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
onnx     = ["onnxruntime>=1.17.0", "tokenizers>=0.15.0"]
onnx-gpu = ["onnxruntime-gpu>=1.17.0", "tokenizers>=0.15.0"]
mlx      = ["mlx>=0.18.0", "mlx-embeddings>=0.1.0"]
dev      = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = ["cembedding/_vendored_mcp_common"]

[project.urls]
# Rendered in the PyPI sidebar. Issues is the one that closes the loop: a user
# who installs from PyPI and hits a defect otherwise has no path back here.
# Changelog points at Releases because this repository keeps no CHANGELOG.md.
Homepage = "https://github.com/Cloto-dev/CEmbedding"
Repository = "https://github.com/Cloto-dev/CEmbedding"
Issues = "https://github.com/Cloto-dev/CEmbedding/issues"
Changelog = "https://github.com/Cloto-dev/CEmbedding/releases"
Documentation = "https://github.com/Cloto-dev/CEmbedding#readme"

[project.scripts]
cembedding = "cembedding.server:run"
cembedding-download-model = "cembedding.download_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package layout: the server modules live under cembedding/, including the
# vendored mcp_common snapshot at cembedding/_vendored_mcp_common/. The root
# server.py is a shim for the git-clone / development path and is deliberately
# excluded from the wheel so it never installs a top-level module.
packages = ["cembedding"]
